--- a/fusion.cabal
+++ b/fusion.cabal
@@ -17,10 +17,12 @@ library
   other-extensions:    DeriveFunctor, LambdaCase, RankNTypes, GADTs
   ghc-options:         -O2 -fexpose-all-unfoldings -fmax-simplifier-iterations=20
   build-depends:       
-      base         >=4.7 && <5
-    , transformers >=0.3 && <0.5
-    , pipes-safe   >=2.2 && <3
-    , void         >=0.7 && <1
+      base         >=4.7  && <5
+    , transformers >=0.3  && <0.5
+    , pipes-safe   >=2.2  && <3
+    , void         >=0.7  && <1
+    , bytestring   >=0.10 && <1
+    , text         >=1.2  && <2
   default-language:    Haskell2010
 
 Test-suite doctests
