--- a/fusion.cabal
+++ b/fusion.cabal
@@ -27,6 +27,7 @@ library
     , stm           >=2.3  && <3
     , monad-control >=1.0  && <2
     , free          >=4.0  && <5
+    , exceptions    >=0.8  && <1
   default-language:    Haskell2010
 
 Test-suite doctests
@@ -39,3 +40,4 @@ Test-suite doctests
     , directory    >=1.0
     , doctest      >=0.8
     , filepath     >=1.3
+    , lens         >=4.7
